Use staging read token for commit metadata

--- a/.github/workflows/regenerate-logs.yml
+++ b/.github/workflows/regenerate-logs.yml
@@ -29,7 +29,7 @@ jobs:
         
       - name: Fetch commit metadata from GitHub API
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.KYROX_PM_STAGING_READ_TOKEN }}
         run: |
           python3 << 'EOF'
           import json
