chore: run regenerate logs workflow daily

--- a/.github/workflows/regenerate-logs.yml
+++ b/.github/workflows/regenerate-logs.yml
@@ -6,7 +6,7 @@ name: Regenerate Commit Metadata Logs
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 2 * * 1"
+    - cron: "0 2 * * *"
 
 jobs:
   regenerate-logs:
